Fix loading z-index issue

--- a/src/app/core/nebular/theme/components/cdk/overlay/_overlay.theme.scss
+++ b/src/app/core/nebular/theme/components/cdk/overlay/_overlay.theme.scss
@@ -6,6 +6,6 @@
   }
 
   .cdk-overlay-container {
-    z-index: 1040;
+    z-index: 10000;
   }
 }
