--- a/src/app/pages/shared/global-search-result/thumbnail-view.scss
+++ b/src/app/pages/shared/global-search-result/thumbnail-view.scss
@@ -128,3 +128,8 @@
     }
   }
 }
+disruption-asset-preview-dialog-body {
+  display: block;
+  height: 85vh;
+  overflow: auto;
+}
